# typing_preference_study

./: .gitignore  INSTALL.md  README.md  README_analyze_data.txt  README_analyze_raw_data.txt  README_analyze_summary_data.txt  README_typing_studies.txt  bigram_2x80pairs_LH.csv  bigram_3pairs_RH.csv  bigram_80pairs_LH.csv  bigram_pairs.csv  index.html  package-lock.json  package.json  pyproject.toml  readme.md  typing-study.xlsx  vite.config.js
OLD_generate-sublists-pairs/: generate-sublists-pairs-1file.py  generate-sublists-pairs.py  letter_pair_sublists.json
analyze/: README_analyze_data.txt  analyze_data.py  command-line_process.txt  compare_datasets.py  config.yaml  ergonomics_descriptive.py  ergonomics_mixed_effects.py  keyboard_ergonomics.py  process_data.py  pyproject.toml
analyze_data/: analyze_bigram_prolific_study_data copy.py  analyze_bigram_prolific_study_data.py  analyze_bigram_prolific_study_data_pilot.py  analyze_bigram_prolific_study_data_pilot6.py  analyze_frequency_speed_preference.py  analyze_objectives.py  analyze_raw_data.py  compare_datasets.py  compare_results.py  config.yaml  median_bigram_times.csv  process_summary_data.py  pyproject.toml  search_table.py
analyze_data/pilots/: analyze_bigram_prolific_study_data_pilot2.py
analyze_raw/: analyze_raw_data.py
analyze_raw_data/: analyze_raw_data.py  pyproject.toml
analyze_summary_data/: analyze_frequency_speed_preference.py  analyze_objectives.py  analyze_preferred_positions_transitions.py  analyze_speed_frequencies_choices.py  bradley_terry_feature_count.py  bradley_terry_model_direct.py  check_data_availability.py  compare_results.py  config.yaml  diagnose_data.py  moo_objectives_analysis.py  (+5 more)
(+70 files in other folders)
