[tool.poetry]
name = "bigram-typing-comfort-experiment"
version = "0.1.0"
description = ""
authors = ["Arno Klein"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
