[tool.poetry]
name = "analyze-bigram-typing-data"
version = "0.1.0"
description = "Analyze bigram typing data"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"  # Specify Python 3.12
numpy = "^1.26.0"  # Use the latest version of NumPy
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"